fix gap vs spacer

--- a/src/styles/components/menu-button.css
+++ b/src/styles/components/menu-button.css
@@ -49,7 +49,7 @@
     a.m__menu-button-secondary,
     button.m__menu-button-secondary
   ):last-of-type {
-  padding-inline: var(--m__gap-xs);
+  padding-inline: var(--m__spacer-xs);
 }
 
 .m__split-button
@@ -59,7 +59,7 @@
     a.m__menu-button-secondary,
     button.m__menu-button-secondary
   ).S:last-of-type {
-  padding-inline: var(--m__gap-xxs);
+  padding-inline: var(--m__spacer-xxs);
 }
 
 :is(
