--- a/src/styles/page-composition/wrappers.css
+++ b/src/styles/page-composition/wrappers.css
@@ -45,8 +45,8 @@
       width: min(1050px, 100%);
       margin-inline: auto;
       padding-inline: var(--m__wrapper-pad);
-      padding-block-start: var(--m__gap-xl);
-      padding-block-end: var(--m__gap-m);
+      padding-block-start: var(--m__spacer-xl);
+      padding-block-end: var(--m__spacer-m);
 
       @media (width < 767px) {
         padding-block: var(--m__wrapper-pad);
