--- a/src/styles/prototypes/auth-layout.css
+++ b/src/styles/prototypes/auth-layout.css
@@ -23,7 +23,7 @@
     justify-content: center;
     min-height: 100vh;
     min-height: 100dvh;
-    padding: var(--m__gap-l) 1rem;
+    padding: var(--m__spacer-l) 1rem;
     border-radius: 0;
     background-color: var(--m__bg);
     color: var(--m__text);
@@ -40,7 +40,7 @@
   color: inherit;
 
   & .auth-layout__promo-heading {
-    margin: 0 0 var(--m__gap-m);
+    margin: 0 0 var(--m__spacer-m);
     font-size: 1.6rem;
     font-weight: var(--m__font-weight-heavy);
     line-height: 1.2;
@@ -73,7 +73,7 @@
       (var(--auth-layout-icon-count) - 1)
   );
   position: relative;
-  margin-bottom: var(--m__gap-xs);
+  margin-bottom: var(--m__spacer-xs);
 }
 
 .auth-layout__icons {
@@ -560,7 +560,7 @@ a.auth-layout__icon-hover-zone {
 
 .auth-layout__promo-status {
   display: grid;
-  margin-bottom: var(--m__gap-s);
+  margin-bottom: var(--m__spacer-s);
 
   & > .auth-layout__promo-caption {
     grid-area: 1 / 1;
@@ -664,7 +664,7 @@ a.auth-layout__icon-hover-zone {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: var(--m__gap-l) 0;
+  padding: var(--m__spacer-l) 0;
 }
 
 .auth-form {
@@ -731,7 +731,7 @@ a.auth-layout__icon-hover-zone {
   }
 
   & .auth-form__agreement {
-    margin-bottom: var(--m__gap-s);
+    margin-bottom: var(--m__spacer-s);
     font-size: var(--m__font-size-s);
 
     & a {
