--- a/src/styles/prototypes/docs.css
+++ b/src/styles/prototypes/docs.css
@@ -21,7 +21,7 @@
 .docs-quickstart-content h4,
 .docs-quickstart-content h5,
 .docs-quickstart-content h6 {
-  margin-top: var(--m__gap-m);
+  margin-top: var(--m__spacer-m);
 }
 
 .docs-quickstart-content h2 {
