--- a/src/styles/prototypes/online-docs.css
+++ b/src/styles/prototypes/online-docs.css
@@ -286,7 +286,7 @@
   background-color: var(--m__bg-accent);
   color: var(--m__text-inverted);
   border-radius: var(--m__radius-xl);
-  margin-top: var(--m__gap-m);
+  margin-top: var(--m__spacer-m);
   margin-left: calc(-1 * var(--online-doc-title-bleed));
   margin-right: calc(-1 * var(--online-doc-title-bleed));
   padding: var(--online-doc-title-padding-block) var(--online-doc-title-bleed);
