--- a/src/styles/service/posts.css
+++ b/src/styles/service/posts.css
@@ -4,7 +4,7 @@
   display: block;
   font-size: var(--m__font-size-s);
   color: var(--m__text-caption);
-  margin-bottom: var(--m__gap-s);
+  margin-bottom: var(--m__spacer-s);
 }
 
 .posts-list {
